@@ -5,9 +5,9 @@ before_install:
   - git config --global user.name "Dist Zilla Plugin TravisCI"
   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
 install:
-  - cpanm  --quiet  --notest --skip-installed Dist::Zilla
-  - dzil authordeps | grep -ve '^\W' | xargs -n 5 -P 10 cpanm  --quiet   --notest  --skip-installed
-  - dzil listdeps | grep -ve '^\W' | cpanm  --quiet   --notest  --skip-installed
+  - cpanm  --verbose  --notest --skip-installed Dist::Zilla
+  - dzil authordeps | grep -ve '^\W' | xargs -n 5 -P 10 cpanm  --verbose   --notest  --skip-installed
+  - dzil listdeps | grep -ve '^\W' | cpanm  --verbose   --notest  --skip-installed
 language: perl
 perl:
   - '5.22'
