@@ -9,3 +9,4 @@ copyright_year = 2016
 [@Author::NMBOOKER]
 
 [TravisCI]
+verbose = 1
